@startuml

title __SERVICES's Class Diagram__\n

  namespace com.example.telecom.paris {
    namespace services {
      class com.example.telecom.paris.services.Edge {
          - distance : int
          + Edge()
          + getDistance()
          + getVertex1()
          + getVertex2()
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace services {
      class com.example.telecom.paris.services.Graph {
          - edges : Set<Edge>
          - vertexes : Set<Vertex>
          + Graph()
          + addEdge()
          + getDistance()
          + getSuccessors()
          + getVertex()
          + getVertexes()
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace services {
      class com.example.telecom.paris.services.MinDistance {
          - minDistances : Map<Vertex, Integer>
          + MinDistance()
          + getMinDistance()
          + getMinDistanceVertex()
          + setMinDistance()
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace services {
      class com.example.telecom.paris.services.ShortestPaths {
          - previousEdges : Map<Vertex, Vertex>
          + ShortestPaths()
          + getShortestPath()
          + setPrevious()
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace services {
      class com.example.telecom.paris.services.Vertex {
          - name : String
          + Vertex()
          + getLabel()
          + getSuccessors()
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace services {
      class com.example.telecom.paris.services.VertexesSet {
          ~ processedVertexes : Set<Vertex>
          + VertexesSet()
          + add()
          + contains()
      }
    }
  }
  

  com.example.telecom.paris.services.Edge o-- com.example.telecom.paris.interfaces.Vertex : vertex1
  com.example.telecom.paris.services.Edge o-- com.example.telecom.paris.interfaces.Vertex : vertex2
  com.example.telecom.paris.services.Graph .up.|> com.example.telecom.paris.interfaces.Distance
  com.example.telecom.paris.services.Graph .up.|> com.example.telecom.paris.interfaces.Graph
  com.example.telecom.paris.services.MinDistance .up.|> com.example.telecom.paris.interfaces.MinDistance
  com.example.telecom.paris.services.ShortestPaths .up.|> com.example.telecom.paris.interfaces.ShortestPaths
  com.example.telecom.paris.services.Vertex .up.|> com.example.telecom.paris.interfaces.Vertex
  com.example.telecom.paris.services.Vertex o-- com.example.telecom.paris.interfaces.Graph : graph
  com.example.telecom.paris.services.VertexesSet .up.|> com.example.telecom.paris.interfaces.ProcessedVertexesSet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
